solved the mobile layout problem

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@
 .quote-div{
 	background-color: #f2f2f2;
 	height:100px;
-	border-radius: 20px;
+	border-radius: 10px;
 }
 
 .about-me-div{
@@ -76,6 +76,19 @@
 	display:none;
 }
 
+.table-borderless tbody tr td,
+.table-borderless tbody tr th{
+	border:none;
+}
+
+.table-borderless tbody tr th{
+	width:150px;
+	font-size:16px;
+}
+
+.table-borderless tbody tr td{
+	font-size:16px;
+}
+
 #img-read{
 	padding-left:30px;
-}
